{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 5,
  "lineage": "7de3d28c-7e93-ffe9-6b73-851d4bb99544",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d8d3a80624f12e0",
            "arn": "arn:aws:ec2:us-east-1:975050007786:elastic-ip/eipalloc-00d8d3a80624f12e0",
            "domain": "vpc",
            "id": "eipalloc-00d8d3a80624f12e0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-223-193-232.compute-1.amazonaws.com",
            "public_ip": "44.223.193.232",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050007786:security-group/sg-099ec07042669f005",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-099ec07042669f005",
            "ingress": [],
            "name": "Terraform_Firewall",
            "name_prefix": "",
            "owner_id": "975050007786",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05e1f27af662e5d82"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "Firewall_rule_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050007786:security-group-rule/sgr-05bd655fe3f1ef4ae",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05bd655fe3f1ef4ae",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-099ec07042669f005",
            "security_group_rule_id": "sgr-05bd655fe3f1ef4ae",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Firewall_rule_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050007786:security-group-rule/sgr-0a1676c18dd7ea462",
            "cidr_ipv4": "44.223.193.232/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0a1676c18dd7ea462",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-099ec07042669f005",
            "security_group_rule_id": "sgr-0a1676c18dd7ea462",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_security_group.Firewall"
          ]
        }
      ]
    }
  ]
}